# SiteRecorder

./: .gitignore  CONTRIBUTING.md  Cargo.toml  FFMPEG_SETUP.md  INSTALLATION_GUIDE.md  LICENSE  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RECORDING_MODES.md  USAGE.md  install-deps.sh  tauri.conf.json
crates/browser/: Cargo.toml
crates/browser/src/: lib.rs
crates/crawler/: Cargo.toml
crates/crawler/src/: lib.rs
crates/exporter/: Cargo.toml
crates/exporter/src/: lib.rs
crates/notifier/: Cargo.toml
crates/notifier/src/: lib.rs
crates/recorder/: Cargo.toml
crates/recorder/src/: lib.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: lib.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
examples/: simple_crawl.rs
src/: cli.rs  daemon.rs  main.rs  progress.rs
ui/: app.js  index.html  styles.css
