[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["cookies", "json", "native-tls"] }
scraper = "0.18"
url = "2.5"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
