[package]
name = "session"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["cookies", "json"] }
cookie = "0.18"
cookie_store = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
keyring = "2.3"
aes-gcm = "0.10"
base64 = "0.21"
chrono = "0.4"
